--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 bevy = { version = "0.10.1", features = ["dynamic_linking"] }  # feature flag must be removed before deployment
 rand = "0.8"
+leafwing-input-manager = "0.9.3"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
