feat: created utility for linting code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 
+[workspace]
+members = ["./", "tools/ci",]
+
 [dependencies]
 bevy = { version = "0.11.0", features = ["dynamic_linking"] }  # feature flag must be removed before deployment
 rand = "0.8"
