--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,8 @@ on:
 jobs:
     check-lints:
         runs-on: ubuntu-latest
+        strategy:
+          fail-fast: false
         steps:
             - name: Checkout
               uses: actions/checkout@v3
